# JuusonMutsi

./: CMakeLists.txt  README.md
data/: JuusonMutsi.json  info  items.json  quest.json
save/: info
sources/libs/core/: CMakeLists.txt
sources/libs/core/src/compute/: eventhandler.h  task.cpp  task.h  workers.cpp  workers.h
sources/libs/core/src/interface/: ivideo.cpp  ivideo.h
sources/libs/core/src/util/: jmtime.cpp  jmtime.h
sources/libs/game/: CMakeLists.txt  state.h
sources/libs/game/src/effects/: effect.h
sources/libs/game/src/entities/: attribute.h  entity.h  player.cpp
sources/libs/game/src/environment/: area.h  terrain.h
sources/libs/game/src/items/: item.h
sources/libs/game/src/main/: game.h
sources/libs/video/: CMakeLists.txt
sources/libs/video/src/: Display.cpp  Display.h  framebuffer.cpp  framebuffer.h  texture.cpp  texture.h
sources/src/loader/: loader.cpp  loader.h
src/platform/win/: win.cpp
